@@ -1,3 +1,4 @@
+
 package code.web.lightup.filter;
 
 import jakarta.servlet.*;
@@ -7,19 +8,16 @@ import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 
-/**
- * Filter để kiểm tra authentication
- * Chỉ cho phép truy cập các trang protected nếu đã đăng nhập
- */
+
 @WebFilter("/*")
 public class AuthFilter implements Filter {
 
-    // Các trang không cần authentication
     private static final List<String> PUBLIC_URLS = Arrays.asList(
-            "/index.jsp",
+            "/",
             "/products.jsp",
             "/product-detail.jsp",
             "/about.jsp",
@@ -34,13 +32,14 @@ public class AuthFilter implements Filter {
             "/register",
             "/forgot-password",
             "/products",
+            "/cate_products",
+            "/product-detail",
             "/CSS/",
             "/JS/",
             "/IMG/",
             "/images/"
     );
 
-    // Các trang cần authentication
     private static final List<String> PROTECTED_URLS = Arrays.asList(
             "/profile.jsp",
             "/order.jsp",
@@ -48,9 +47,6 @@ public class AuthFilter implements Filter {
             "/review"
     );
 
-    @Override
-    public void init(FilterConfig filterConfig) throws ServletException {
-    }
 
     @Override
     public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain)
@@ -72,8 +68,9 @@ public class AuthFilter implements Filter {
             HttpSession session = httpRequest.getSession(false);
 
             if (session == null || session.getAttribute("user") == null) {
-                String redirectUrl = contextPath + "/login.jsp?redirect=" +
-                        java.net.URLEncoder.encode(requestURI, "UTF-8");
+
+                String redirectUrl = contextPath + "/login?redirect=" +
+                        java.net.URLEncoder.encode(requestURI, StandardCharsets.UTF_8);
                 httpResponse.sendRedirect(redirectUrl);
                 return;
             }
@@ -82,13 +79,6 @@ public class AuthFilter implements Filter {
         chain.doFilter(request, response);
     }
 
-    @Override
-    public void destroy() {
-    }
-
-    /**
-     * Kiểm tra xem resource có phải public không
-     */
     private boolean isPublicResource(String path) {
         if (PUBLIC_URLS.contains(path)) {
             return true;
@@ -103,9 +93,7 @@ public class AuthFilter implements Filter {
         return false;
     }
 
-    /**
-     * Kiểm tra xem resource có cần authentication không
-     */
+
     private boolean isProtectedResource(String path) {
         for (String protectedUrl : PROTECTED_URLS) {
             if (path.equals(protectedUrl) || path.startsWith(protectedUrl)) {
